k8s/apps/media/plex/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
