k8s/apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: hsp-proxmox0
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: plex
          image: ghcr.io/home-operations/plex:1.43.2.10687@sha256:be00a2ad851ea3193cd870636f908eb6425ad89390f23cdb08daa35ab5cceacc # renovate: datasource=docker depName=ghcr.io/home-operations/plex packageName=ghcr.io/home-operations/plex versioning=docker registryUrl=https://ghcr.io
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: plex-tcp
              containerPort: 32400
              protocol: TCP
            - name: plex-udp
              containerPort: 32400
              protocol: UDP
          readinessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: transcode
              mountPath: /transcode
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 4000m
              memory: 4Gi
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
        - name: tmp
          emptyDir: {}
        - name: transcode
          emptyDir: {}
        - name: data
          nfs:
            server: 192.168.65.250
            path: /volume1/media
