k8s/apps/media/plex/svc-plex.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-plex
  namespace: plex
  annotations:
    io.cilium/lb-ipam-ips: 192.168.65.156
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
    - name: plex-tcp
      port: 32400
      targetPort: plex-tcp
      protocol: TCP
    - name: plex-udp
      port: 32400
      targetPort: plex-udp
      protocol: UDP
